fix: Updates TechProfile Dark Mode

--- a/src/components/TechProfile.css
+++ b/src/components/TechProfile.css
@@ -33,3 +33,15 @@ h1, h3 {
 .ant-tabs-tab-btn {
   color: var(--text-color);
 }
+.ant-card-head {
+  background: var(--background-color) !important;
+  color: var(--text-color) !important;
+}
+.ant-card-body {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+.ant-divider-horizontal {
+  border-color: var(--text-color-light);
+}
